2005-05-07  Carl Worth  <cworth@cworth.org>

	* src/cairo-xcb-surface.c (_render_operator): 
	* src/cairo-win32-surface.c (_cairo_win32_surface_composite)
	(_cairo_win32_surface_fill_rectangles): Update to track new
	CAIRO_OPERATOR names.

	* test/select-font-no-show-text.c: 
	* src/cairo-surface.c (cairo_surface_set_user_data): Fix
	documentation to refer to functions by their current names.

	* src/cairo-gstate.c (_cairo_gstate_begin_group): Update to track
	latest API (in currently unused function).

2005-05-06  Carl Worth  <cworth@cworth.org>

	* src/cairo-glitz-surface.c (_cairo_glitz_surface_show_glyphs):
	Fix return type from cairo_status_t to cairo_int_status_t.

2005-05-06  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Note that cairo_mask, and "just eliminate a bunch of
	functions are now done".
	
	* TODO: Note that all backwards-compatible and
	backwards-incompatible cahnges for the API Shakeup are now
	done. Sort "new functionality" of API Shakeup into its own
	category.

2005-05-06  Carl Worth  <cworth@cworth.org>

	* src/cairo.c:
	* src/cairo.h: Eliminate the following deprecated functions from
	cairo's interface:

	        cairo_copy
		cairo_get_path
		cairo_get_path_flat
	        cairo_matrix_create
	        cairo_matrix_destroy
	        cairo_matrix_copy
	        cairo_matrix_get_affine
		cairo_surface_set_repeat
		cairo_surface_set_matrix
		cairo_surface_get_matrix
		cairo_surface_set_filter
		cairo_surface_get_filter

	Also, eliminate all support for compiling against, or running with
	old, deprecated names for functions.

	* src/cairo-ft-font.c: (_compute_transform):
	* src/cairo-gstate.c:
	* src/cairo-image-surface.c: (cairo_image_surface_create_for_data):
	* src/cairo-matrix.c: (_cairo_matrix_get_affine),
	(_cairo_matrix_compute_adjoint),
	(_cairo_matrix_is_integer_translation):
	* src/cairo-pattern.c: (cairo_pattern_add_color_stop_rgba),
	(cairo_pattern_set_matrix), (cairo_pattern_get_matrix),